# OpenXcom-DS

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  errors.txt  git_version.h
docs/: Doxyfile_cmake  cmake_install.cmake
libs/SDL-nds/: README-NDS.txt  arm7main.c  rectmain.c
libs/SDL-nds/include/: SDL.h  SDL_gfxPrimitives.h  SDL_mouse.h
libs/SDL_gfx-nds/: README-NDS.txt  SDL_gfxPrimitives.c  SDL_rotozoom.c  orgmakefile  readme imrtech.txt  readme.txt
libs/SDL_image-nds/: Makefile.dc  Makefile.gp32  README-NDS.txt
libs/SDL_mixer-nds/: Makefile.gp32  Makefile.timidity  README-NDS.txt
libs/SDL_mixer-nds/source/: Makefile.mikmod
src/: CMakeLists.txt  cmake_install.cmake
src/Battlescape/: BattlescapeState.cpp
src/Engine/: CatFile.cpp  CrossPlatform.cpp  CrossPlatform.h  Game.cpp  Music.cpp  Screen.cpp  Surface.cpp
src/Savegame/: SerializationHelper.cpp
